a sentence about me replaces hard work from the past

--- a/index.html
+++ b/index.html
@@ -1,3 +1,1 @@
-<title>This is Yapnf's awsome website.</title>
-It dosent have much yet, but it will soon!
-<a href="about.html">more about this website</a>
+My name is Judah, and I really like books! Novels are my favorite
