fonts and stuff are added.

--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-My name is Judah, and I really like books!!<br>
+My name is @!*^#, and I really like books!!<br>
 Yapnf.com is an online review website for preaty much any thing you can reveiw (books, videos, games, ect...)
 <br><a href="index.html">back to home</a>
 <br><br>Aren't you excited to be here?!
