Lists And More Fonts.

--- a/about.html
+++ b/about.html
@@ -2,3 +2,27 @@ My name is @!*^#, and I really like books!!<br>
 Yapnf.com is an online review website for preaty much any thing you can reveiw (books, videos, games, ect...)
 <br><a href="index.html">back to home</a>
 <br><br>Aren't you excited to be here?!
+
+<h2>A List</h2>
+<ul>
+    The First Thing
+    Stuff
+    Another Item
+    More Stuff
+    Yet Another Item
+    Where On Earth Did The First Item Go?
+    Even More Stuff
+    The Last Thing
+</ul>
+
+<h2>Stuff To Make A $&@*^# Potion</h2>
+<ol>
+    Three Ounces Of *&@^@'s Blood.
+    Four Pounds Of Exploding %&@*# Scales.
+    Twenty Four Feathers From A *^$^ %&$@.
+    Poure mixture into a &%$^%%'s Beak, Adding the Wet Ingredients First.
+</ol>
+
+<ul>
+    Note: By the time you read this, cetain information is likly to have been restricted by the S.P.M.S., Society of Protection of Magical Secrets.
+</ul>
