made the list actualy work.

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@ Yapnf.com is an online review website for preaty much any thing you can reveiw (
 
 <h2>Stuff To Make A $&@*^# Potion</h2>
 <ol>
-    Three Ounces Of *&@^@'s Blood.
-    Four Pounds Of Exploding %&@*# Scales.
-    Twenty Four Feathers From A *^$^ %&$@.
-    Poure mixture into a &%$^%%'s Beak, Adding the Wet Ingredients First.
+    <li>Three Ounces Of *&@^@'s Blood.</li>
+    <li>Four Pounds Of Exploding %&@*# Scales.</li>
+    <li>Twenty Four Feathers From A *^$^ %&$@.</li>
+    <li>Poure mixture into a &%$^%%'s Beak, Adding the Wet Ingredients First.</li>
 </ol>
 
 <ul>
