making another list actualy work.

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@ Yapnf.com is an online review website for preaty much any thing you can reveiw (
 
 <h2>A List</h2>
 <ul>
-    The First Thing
-    Stuff
-    Another Item
-    More Stuff
-    Yet Another Item
-    Where On Earth Did The First Item Go?
-    Even More Stuff
-    The Last Thing
+    <li>The First Thing</li>
+    <li>Stuff</li>
+    <li>Another Item</li>
+    <li>More Stuff</li>
+    <li>Yet Another Item</li>
+    <li>Where On Earth Did The First Item Go?</li>
+    <li>Even More Stuff</li>
+    <li>The Last Thing</li>
 </ul>
 
 <h2>Stuff To Make A $&@*^# Potion</h2>
