Added the first image.

--- a/index.html
+++ b/index.html
@@ -30,5 +30,7 @@ Yapnf.com is an online review website for preaty much any thing you can reveiw (
 </ol>
 
 <ul>
-    Note: By the time you read this, cetain information is likly to have been restricted by the S.P.M.S., Society of Protection of Magical Secrets.
+    Note: By the time you read this, cetain information is likly to have been restricted by the S.P.M.S., Society for the Protection of Magical Secrets.
 </ul>
+
+<img src="DIS ONE" alt="Image of a @*$&@^(probably restricted by the S.P.M.S).">
