--- a/index.html
+++ b/index.html
@@ -33,4 +33,4 @@ Yapnf.com is an online review website for preaty much any thing you can reveiw (
     Note: By the time you read this, cetain information is likly to have been restricted by the S.P.M.S., Society for the Protection of Magical Secrets.
 </ul>
 
-<img src="DISONE" alt="Image of a @*$&@^(probably restricted by the S.P.M.S).">yHT*e2R*#sJnu55YJaJ^5U
+<img src="DISONE" alt="Image of a @*$&@^(probably restricted by the S.P.M.S).">
